# 18072025

./: .gitignore  Dockerfile  Makefile  Q&A.md  README.md  main.py  pyproject.toml  sample.env
scraper/optiapi/: client.py  models.py
src/appredis/: redis.py
src/config/: config.py
src/diffcheck/: diff.py  local.py  lock.py  remote.py
src/orchestrator/: orchestrator.py
src/scraper/: scraper.py
src/scraper/optiapi/: client.py  models.py
src/uploader/: uploader.py
tests/config/: test_config.py
tests/diffcheck/: __init__.py  test_diffcheck.py
tests/scraper/: test_scraper.py
tests/scraper/optiapi/: test_articles.py  test_categories.py  test_sections.py
