[project]
name = "18072025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.1.0",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
    "python-logging-loki-v2>=0.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
